# ConsoleChat-0.69

client/: CMakeLists.txt
client/bin_lin/: chat
client/src/: MsgBase.cpp  MsgBase.h  TmplBase.h  UsrBase.cpp  UsrBase.h  functions.cpp  functions.h  main.cpp  message.h  navigation.cpp  navigation.h  net.cpp  net.h  sha256.cpp  sha256.h  user.cpp  user.h
server/: CMakeLists.txt
server/bin_lin/: chatd
server/src/: Logger.cpp  Logger.h  MsgBased.cpp  MsgBased.h  TmplBased.h  UsrBased.cpp  UsrBased.h  main.cpp  message.cpp  message.h  netd.cpp  netd.h  settings.cpp  settings.h  sha256d.h  sql_db.cpp  sql_db.h  user.h
