cmake_minimum_required(VERSION 3.5.0)
project(chat VERSION 0.69.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED YES)

if(WIN32)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../bin_win)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin_win)    
endif(WIN32)
if(UNIX)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../bin_lin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin_lin)   
endif(UNIX)

set(NAV_LIB src/navigation.h src/navigation.cpp)
set(FUNC_LIB src/functions.h src/functions.cpp)
set(MSGB_LIB src/MsgBase.h src/MsgBase.cpp)
set(MSG_LIB src/message.h src/message.cpp)
set(USRB_LIB src/UsrBase.h src/UsrBase.cpp)
set(USR_LIB src/user.h src/user.cpp)
set(NET_LIB src/net.h src/net.cpp)
set(SHA_LIB src/sha256.h src/sha256.cpp)
set(CHAT src/main.cpp)

if(UNIX)
    add_library(navLib SHARED ${NAV_LIB})
    add_library(funcLib SHARED ${FUNC_LIB})
    add_library(msgbLib SHARED ${MSGB_LIB})
    add_library(msgLib SHARED ${MSG_LIB})
    add_library(usrbLib SHARED ${USRB_LIB})
    add_library(usrLib SHARED ${USR_LIB})
    add_library(netLib SHARED ${NET_LIB})
    add_library(shaLib SHARED ${SHA_LIB})
    add_executable(chat ${CHAT})
    target_link_libraries(chat navLib funcLib msgbLib msgLib usrbLib usrLib netLib shaLib)
    target_link_libraries(chat /usr/local/mysql/lib/libmysqlclient.so)
endif(UNIX)

if (WIN32)
    add_executable(chat ${CHAT} ${NAV_LIB} ${FUNC_LIB} ${MSGB_LIB} ${MSG_LIB} ${USRB_LIB} ${NET_LIB})
    add_library(usrLib SHARED ${USR_LIB})
    add_library(shaLib SHARED ${SHA_LIB})
    target_link_libraries(chat ws2_32 wsock32)
    target_link_libraries(chat usrLib shaLib)
endif(WIN32)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
