cmake_minimum_required(VERSION 3.5.0)
project(chatd VERSION 0.69.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED YES)

if(WIN32)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../bin_win)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin_win)    
endif(WIN32)
if(UNIX)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../bin_lin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin_lin)   
endif(UNIX)

set(CHATD src/main.cpp)
set(NET_LIB src/netd.h src/netd.cpp)
set(SQL_LIB src/sql_db.h src/sql_db.cpp)
set(MSGB_LIB src/MsgBased.h src/MsgBased.cpp)
set(MSG_LIB src/message.h src/message.cpp)
set(USRB_LIB src/UsrBased.h src/UsrBased.cpp)
set(USR_LIB src/TmplBased.h src/user.h src/user.cpp)
set(LOGGER_LIB src/Logger.h src/Logger.cpp)
set(SHA_LIB src/sha256d.h src/sha256d.cpp)
set(CONF_LIB src/settings.h src/settings.cpp)

if(UNIX)
    add_library(netLib SHARED ${NET_LIB})
    add_library(sqlLib SHARED ${SQL_LIB})
    add_library(msgbLib SHARED ${MSGB_LIB})
    add_library(msgLib SHARED ${MSG_LIB})
    add_library(usrbLib SHARED ${USRB_LIB})
    add_library(usrLib SHARED ${USR_LIB})
    add_library(logLib SHARED ${LOGGER_LIB})
    add_library(shaLib SHARED ${SHA_LIB})
    add_library(confLib SHARED ${CONF_LIB})
    add_executable(chatd ${CHATD})
    target_link_libraries(chatd netLib sqlLib msgbLib msgLib usrbLib usrLib logLib shaLib confLib)
    target_link_libraries(chatd /usr/local/mysql/lib/libmysqlclient.so)
endif(UNIX)

if(WIN32)
    include_directories("C:/Program\ Files/MySQL/MySQL\ Server\ 8.0/include")
    add_executable(chatd ${CHATD} ${NET_LIB} ${SQL_LIB})
    
    add_library(msgbLib SHARED ${MSGB_LIB})
    add_library(msgLib SHARED ${MSG_LIB})
    add_library(usrbLib SHARED ${USRB_LIB})
    add_library(usrLib SHARED ${USR_LIB})
    add_library(logLib SHARED ${LOGGER_LIB})
    add_library(shaLib SHARED ${SHA_LIB})
    add_library(confLib SHARED ${CONF_LIB})

    target_link_libraries(msgbLib msgLib)
    target_link_libraries(msgLib confLib)
    target_link_libraries(usrbLib usrLib)
    target_link_libraries(logLib confLib)
    target_link_libraries(chatd "C:/Program\ Files/MySQL/MySQL\ Server 8.0/lib/libmysql.lib")
    target_link_libraries(chatd ws2_32 wsock32)
    target_link_libraries(chatd msgbLib msgLib usrbLib usrLib logLib shaLib confLib)
endif(WIN32)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)